package de.dhbw.schachspiel.classes.logger;

public enum LogType
{
    GAME,
    INFO,
    ERROR,
    TEST

}
