package de.dhbw.schachspiel.interfaces;

public interface ILogger
{
    void log(String message);
}
